Have to fix potential overflow of notes in container. YES I SEE THE DAMNED SCROLLBAR ON THE LEFT IM WOYKIN ON IT

--- a/src/pages/styles/notes.css
+++ b/src/pages/styles/notes.css
@@ -2,19 +2,11 @@
 	height: 80%;
 	width: 80%;
 	padding-left: 50px;
-}
-
-.notes-background {
-	background-color: #ffffff;
-	margin: 0;
-	height: 100%;
-	width: 70%;
-	margin-left: 2%;
-	margin-right: 28%;
+	overflow-y: auto;
 }
 
 .notes-header {
-	font-size: 60;
+	font-size: 2.25rem;
 	color: #1e3a8a;
 	font-weight: bold;
 	width: 28%;
@@ -26,8 +18,8 @@
 	display: flex;
 	flex-grow: 1;
 	padding: 40px;
-	width: 100%;
-	height: 70%;
+	width: 90%;
+	height: 80%;
 	border-radius: 70px;
 	background-color: #e0f2fe;
 }
@@ -109,8 +101,7 @@
 .dropdown_arrow {
 	height: 2rem;
 	width: 1.5rem;
-	margin-left: 0rem;
-	margin-top: 1.4rem;
+	padding-top: 1.4rem;
 }
 
 .filter-by-button {
@@ -118,8 +109,7 @@
 	border: none;
 	width: fit-content;
 	height: fit-content;
-	margin: 0;
-	padding: 0;
+	padding: 0; /* Do not remove this value. I can't for the love of God figure out why removing this makes the button change positions, but just don't mess with it */
 }
 
 .filter-by-button:hover {
